# neoricalex

./: .editorconfig  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  .travis.yml.DEV  .variaveis_ambiente  LICENSE  README.md  configure.ac  local.yml  mkdocs.yml  shell
.travis/: Vagrantfile  compilar_travis.sh
src/: .tmux.conf  Makefile.am  compilar.sh  iniciar.sh  iniciar_desenvolvimento.sh  iniciar_sessao.sh  iniciar_sessao_tmux.sh  neoricalex.c  sessao_tmux.sh  upload_cloud.sh
src/log/scripts/: toggle_logging.sh  variables.sh
src/vps/: .gitignore  Makefile  Vagrantfile  Vagrantfile.DEV  Vagrantfile.Travis  Vagrantfile.Ubuntu  Vagrantfile.VPS_BASE  Vagrantfile.VPS_DEV  Vagrantfile.dev  Vagrantfile.travis  compilar.sh  compilar_box.sh  compilar_docker.sh  compilar_nfdos.sh  compilar_vps.sh  criar_neoricalex_nfdos_docker.sh  iniciar_docker.sh  iniciar_nfdos.sh  requerimentos.sh  upload_cloud.sh
src/vps/.travis/: Vagrantfile
src/vps/box/: .gitignore  ubuntu.json
src/vps/box/script/: atualizar.sh  finalizar.sh  instalar_pacotes.sh  kvm.sh  limpeza.sh  minimize.sh  motd.sh  nfdos.sh  packer.sh  swap.sh  todo.sh  usuario.sh  vagrant.sh  virtualbox.sh
src/vps/docker/: ansible  prepare.sh
src/vps/nfdos/core/: preseed.cfg  rootfs_head.nfdos
src/vps/nfdos/desktop/: desktop.json  homologacao.sh  late_command.nfdos  libvirt.json  virtualbox.json
src/vps/nfdos/desktop/ansible/: ansible.cfg  inventory.ini  local.yml
src/vps/nfdos/desktop/app/: iniciar.sh
src/vps/vagrant-libs/: bootstrap.sh  requerimentos.sh  requerimentos_box_base.sh  upgrade.sh
(+10 files in other folders)
