#  -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([NEORICALEX], [1.0], [neo.webmaster.2@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_SRCDIR([src/neoricalex.c])
#AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
				Makefile
				src/Makefile
				])


# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([
				stdlib.h
				stdio.h
				])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
